@@ -1,17 +1,21 @@
-FROM amazoncorretto:21 AS build_stage
+FROM gradle:9-jdk25 AS build_stage
 WORKDIR /build
+COPY build.gradle gradle.properties settings.gradle* gradlew* ./
+COPY gradle ./gradle
+RUN gradle --no-daemon dependencies --stacktrace || true
 COPY . .
-RUN yum -y install findutils
-RUN ./gradlew --no-daemon clean test shadowJar --stacktrace
+RUN gradle  --no-daemon clean test shadowJar --stacktrace
 
-FROM amazoncorretto:21
-WORKDIR /awg2
+FROM amazoncorretto:25
+WORKDIR /pvpq
 COPY --from=build_stage /build/build/libs/wow-pla.jar wow-pla.jar
 EXPOSE 9000 9400
 CMD java \
-    -jar \
     --add-opens java.base/java.lang=ALL-UNNAMED \
+    --add-modules jdk.incubator.vector \
+    -XX:-OmitStackTraceInFastThrow \
     -Xmx6g \
     -Xms1g \
     -XX:+UseG1GC \
-    wow-pla.jar
+    -jar wow-pla.jar \
+    --config /pvpq/config.yaml
